# ai-cooking-app

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.local.yml  documents_initial_data.json  future_ideas.md  manage.py  pyproject.toml  requirements.txt  services.md
ai_cooking_project/: asgi.py  settings.py  urls.py  wsgi.py
documents_processor/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
documents_processor/fixtures/: recipe_book_chunks.json  recipes_1536_dimensions.json  recipies_6_march_2025_3072_dimensions.json
documents_processor/migrations/: 0001_initial.py  0002_update_embedding_and_add_indices.py  0003_alter_content_tsv_field.py  0004_add_content_tsv_trigger.py
documents_processor/services/: file_processor_service.py  google_drive_service.py  openai_service.py  text_splitter_service.py  vector_service.py
recipes/: models.py  serializers.py  urls.py  views.py
recipes/fixtures/: recipes_fixture0.json
recipes/management/commands/: wait_for_db.py
recipes/migrations/: 0001_initial.py  0002_recipe_created_at_recipe_image_url_recipe_updated_at.py  0003_recipe_blog_content_recipe_difficulty_recipe_season.py  0004_recipe_ingredients_recipe_keywords.py  0005_recipe_cooking_methods_recipe_course_recipe_cuisine_and_more.py
recipes/models/: __init__.py  chat_models.py
recipes/services/: recipe_generator_service.py  recipe_search_service.py
wordpress-plugins/fetch-recipes/: README.md  fetch-recipes.php  fetch-recipes_old_version.php  fetch_recipes_admin.php
