[tool.poetry]
name = "ai-cooking-app"
version = "0.1.0"
description = ""
authors = ["Łukasz Segin <l.segin@bankier.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
djangorestframework = "^3.14.0"
gunicorn = "^20.1"
whitenoise = "^6.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
